# i_own_tokens_sp1

./: README.md
data/: private_inputs.json  public_inputs.json
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
