[package]
name = "token-ownership-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "4.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
sp1-build = "4.0.0" 